--- a/templates/exam/index.html
+++ b/templates/exam/index.html
@@ -20,7 +20,7 @@
   
     <p><strong> Get Start With LEARNPATHY :</strong></p>
     <a href="/student/studentsignup" class="btn btn-lg btn-info" style="padding-right: 35px; border-radius: 0%;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Sign Up as Student</a>
-    <a href="/student/studentsignup" class="btn btn-lg btn-warning" style="padding-right: 35px; border-radius: 0%;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Login as Student</a>
+    <a href="/student/studentlogin" class="btn btn-lg btn-warning" style="padding-right: 35px; border-radius: 0%;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Login as Student</a>
     
     <br><br><br>
   </div>  
